<LinearLayout android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/nouveau_mot"
        style="AppTheme"
        android:text="@string/nouveau_mot" />
    <Button
        android:id="@+id/voir_liste"
        style="AppTheme"
        android:text="@string/voir_liste" />
    <Button
        android:id="@+id/interrogation"
        style="AppTheme"
        android:text="@string/interrogation" />
    <Button
        android:id="@+id/about"
        style="AppTheme"
        android:text="@string/about" />
    <TextView
        android:id="@+id/about_content"
        style="AppTheme"
        android:visibility="gone"
        android:text="@string/about_content" />
	<Button
        android:id="@+id/deconnexion"
        style="AppTheme"
        android:text="@string/deconnexion" />
</LinearLayout>
