<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="AppTheme"
        android:text="@string/username" />

    <EditText
        android:id="@+id/username"
        style="AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dip"
        android:fadingEdge="horizontal"
        android:singleLine="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="AppTheme"
        android:text="@string/password" />

    <EditText
        android:id="@+id/password"
        style="AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="horizontal"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/passwordAgainText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="AppTheme"
        android:text="@string/passwordAgain" />

    <EditText
        android:id="@+id/passwordAgain"
        style="AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:fadingEdge="horizontal"
        android:inputType="textPassword"
        android:singleLine="true" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/okbutton"
        	style="AppTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/createbutton"
        	style="AppTheme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />
        
        <Button
            android:id="@+id/cancelbutton"
        	style="AppTheme"
        	android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>